<resources>
    <string name="app_name">Storybook</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="title_activity_overall_setting">overall_setting</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_family_member_page">FamilyMemberPage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="gallery">Gallery</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="upload_media">Upload Media</string>
    <string name="home_page">Home Page</string>
    <string name="image_edit">Image Edit</string>
    <string name="manage">Manage</string>
    <string name="back">Back</string>
    <string name="view_data">View data</string>
    <string name="people">People</string>
    <string name="gallery2">Gallery</string>
    <string name="log_out">Log Out</string>
    <string name="createpage">create page</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="create_page">create page</string>
    <string name="name">Name:</string>
    <string name="enter_the_name">Enter the Name</string>
    <string name="phone_number">Phone number:</string>
    <string name="view_my_family">View my Family</string>
    <string name="view_my_friends">View my Friends</string>
    <string name="enter_the_phone_number">Enter the Phone Number</string>
    <string name="add">ADD</string>
    <string name="viewp">View People</string>
    <string name="mainpage">main page</string>
    <string name="setting">Setting</string>
    <string name="korean">한국어</string>

    <string name="nightmode">NightMode</string>
    <string name="change_language">change language</string>
    <string name="patient">I am patient</string>
    <string name="caretaker">I am caretaker</string>
    <string name="inct">In CareTaker Mode</string>
    <string name="incaredmode">In Cared  Mode</string>
    <string name="loginpage">login page</string>
    <string name="enter_your_email">Enter your Email:</string>
    <string name="enter_your_password">Enter your Password:</string>
    <string name="login">Login</string>
    <string name="no_account_register">No account? Register</string>
    <string name="uploadpage">upload page</string>
    <string name="registerpage">Register page</string>
    <string name="enter_your_full_name">Enter your Full name:</string>
    <string name="repeat_your_password">Repeat your Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="account_already_made_nlogin">Account already made? \nLogin</string>
    <string name="relation">Relation</string>
    <string name="member_s_infomation">Member\'s infomation</string>
    <string name="change">change</string>
    <string name="media">Media</string>
    <string name="cancel">cancel</string>
    <string name="information">Information:</string>
    <string name="friendpage">friends page</string>
    <string name="semail">Email:</string>
    <string name="relation2">Relation:</string>
    <string name="info">Info</string>
    <string name="familypage">family page</string>
    <string name="contact">Contact</string>
    <string name="videopage">video page</string>
    <string name="photopage">photo page</string>
    <string name="photo">photo</string>
    <string name="videos">Videos</string>
    <string name="statistic">Statistic</string>
    <string name="gallerypage">Gallery page</string>
    <string name="passwordpage">password page</string>
    <string name="access">Access</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="select_image">Select Image</string>
    <string name="select_video">Select Video</string>
    <string name="choose_belong_to">choose belong to</string>
    <string name="manage_gallery">Manage Gallery</string>
    <string name="manage_family">Manage family</string>
    <string name="manage_friends">Manage friends</string>
    <string name="managepage">Manage Page</string>
    <string name="caretakermain">Caretaker Main Page</string>
    <string name="incorrectpw">Incorrect Password</string>
    <string name="switchct">Switched to CareTaker mode!</string>
</resources>