<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CaretakerRegister">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        app:logo="@drawable/gallery"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:subtitle="@string/registerpage"
        app:title="@string/app_name"
        app:titleMarginStart="90dp"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:id="@+id/regist"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/toolbar">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_email"
            android:textColor="@color/blue2"
            android:textSize="30dp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/caretakerEmail"
            android:layout_width="351dp"
            android:layout_height="52dp"
            android:layout_below="@+id/username"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/nameinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/caretakerEmail"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/enter_your_full_name"
            android:textColor="@color/blue2"
            android:textSize="30dp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/caretakerFullName"
            android:layout_width="351dp"
            android:layout_height="52dp"
            android:layout_below="@+id/nameinfo"
            android:ems="10"
            android:hint="@string/full_name" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/caretakerFullName"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/enter_your_password"
            android:textColor="@color/blue2"
            android:textSize="30dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/caretakerPassword"
            android:layout_width="351dp"
            android:layout_height="52dp"
            android:layout_below="@+id/password"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />


        <EditText
            android:id="@+id/caretakerPassword2"
            android:layout_width="351dp"
            android:layout_height="52dp"
            android:layout_below="@+id/caretakerPassword"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:ems="10"
            android:hint="@string/repeat_your_password"
            android:inputType="textPassword" />
    </RelativeLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_below="@+id/regist"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:backgroundTint="@color/button"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/registerLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:backgroundTint="@color/button"
        android:onClick="loginLinkClicked"
        android:text="@string/account_already_made_nlogin"
        android:textStyle="bold" />



    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_below="@+id/registerLink" />

</RelativeLayout>