<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendMemberCreatePage">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:onClick="onBackClick"
        app:logo="@drawable/gallery"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:subtitle="@string/create_page"
        app:title="@string/app_name"
        app:titleMarginStart="90dp"
        />

    <RelativeLayout
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin">

        <ImageButton
            android:id="@+id/Avatarbtn"
            android:layout_width="225dp"
            android:layout_height="189dp"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:onClick="selectImage"
            android:scaleType="fitCenter"
            tools:srcCompat="@tools:sample/avatars" />

        <EditText
            android:id="@+id/FriendNumberEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Avatarbtn"
            android:layout_marginTop="@dimen/activity_horizontal_margin2"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            android:textSize="30sp"

            />

        <EditText
            android:id="@+id/FriendNumberName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/FriendNumberEmail"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="text"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/FriendNumberInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/FriendNumberName"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:ems="10"
            android:hint="@string/member_s_infomation"
            android:inputType="text"
            android:textSize="30sp" />


        <Button
            android:id="@+id/addFRbtn"
            android:layout_width="@dimen/layout"
            android:layout_height="@dimen/activity_horizontal_margin3"
            android:layout_below="@id/FriendNumberInfo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:backgroundTint="@color/button"
            android:onClick="uploadFR"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>