<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageVideoAndPhotoPage">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:onClick="onBackClick"
        app:logo="@drawable/gallery"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:subtitle="@string/uploadpage"
        app:title="@string/app_name"
        app:titleMarginStart="90dp" />



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar1"
        android:layout_marginTop="@dimen/activity_horizontal_margin3"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <Button
            android:id="@+id/galleryPhotoBtn"
            android:layout_width="265dp"
            android:layout_height="76dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/button"
            android:minHeight="48dp"
            android:onClick="onPhotoClick"
            android:text="@string/photo"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_horizontal_margin"
            android:textStyle="bold" />

        <Button
            android:id="@+id/galleryVideoBtn"
            android:layout_width="265dp"
            android:layout_height="75dp"
            android:layout_below="@+id/galleryPhotoBtn"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/activity_horizontal_margin2"
            android:backgroundTint="@color/button"
            android:onClick="onVideoClick"
            android:text="@string/videos"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_horizontal_margin"
            tools:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>