<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".language">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        app:logo="@drawable/gallery"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:subtitle="friends page"
        android:onClick="onBackClick"
        app:title="@string/app_name"
        app:titleMarginStart="90dp" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:id="@+id/languagechoosing"
        android:layout_marginTop="@dimen/activity_horizontal_margin2"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/toolbar"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="@dimen/input"
            android:id="@+id/english"
            android:text="@string/english"
            android:layout_height="@dimen/activity_horizontal_margin2"
            />
        <Button
            android:layout_width="@dimen/input"
            android:layout_height="@dimen/activity_horizontal_margin2"
            android:layout_below="@+id/english"
            android:text="@string/chinese"
            android:id="@+id/chinese"
            />
    </RelativeLayout>

</RelativeLayout>