<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendMemberPage">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_below="@+id/toolbar"
        android:id="@+id/profile_image"
        android:layout_width="@dimen/photo_size2"
        android:layout_height="@dimen/photo_size2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="chooseavatar"
        android:src="@drawable/album" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:onClick="onBackClick"
        app:logo="@drawable/gallery"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:subtitle="@string/uploadpage"
        app:title="@string/app_name"
        app:titleMarginStart="90dp" />

    <TextView
        android:id="@+id/scode_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/profile_image"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:text="" />

    <RelativeLayout
        android:id="@+id/relative_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scode_profile"
        android:background="?attr/selectableItemBackground"
        android:clickable="false"
        android:focusable="true"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/text_color"
                android:textSize="@dimen/fab_margin" />

            <EditText
                android:id="@+id/frname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Default"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relative_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_name"
        android:paddingVertical="10dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/text_color"
                android:textSize="@dimen/fab_margin" />

            <EditText
                android:id="@+id/fremail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_below="@+id/relative_phone"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/relative_name"
        android:background="@color/black" />


    <RelativeLayout
        android:id="@+id/relative_house_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_phone"
        android:background="?attr/selectableItemBackground"
        android:clickable="false"
        android:focusable="true"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information"
                android:textColor="@color/text_color"
                android:textSize="@dimen/fab_margin" />

            <EditText
                android:id="@+id/frinformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />


        </LinearLayout>


        <Button
            android:id="@+id/mediabtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="154dp"
            android:layout_marginEnd="150dp"
            android:layout_marginBottom="11dp"
            android:backgroundTint="@color/button"
            android:onClick="deleteOrContact"
            android:text="@string/contact" />

        <Button
            android:id="@+id/cancelbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/button"
            android:onClick="cancel"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/changebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="45dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/button"
            android:onClick="change"
            android:text="@string/change" />


    </RelativeLayout>


</RelativeLayout>