<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:onClick="onBackClick"
        app:logo="@drawable/gallery"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:subtitle="@string/setting"
        app:title="@string/app_name"
        app:titleMarginStart="90dp" />
    <Button
        android:id="@+id/Caretakerbtn"
        android:layout_width="@dimen/photo_size3"
        android:gravity="bottom"
        android:backgroundTint="@color/button"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lang"
        android:layout_marginTop="@dimen/layout"
        android:layout_centerHorizontal="true"

        android:onClick="switchCTmode"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/StatusText"
        android:layout_width="294dp"
        android:layout_height="51dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="In Cared Mode"
        android:layout_below="@+id/toolbar"
        android:textSize="@dimen/activity_horizontal_margin2"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        />

    <Switch
        android:id="@+id/nightmodeswitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/StatusText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/layout"
        android:text="@string/nightmode"
        android:textSize="@dimen/activity_horizontal_margin"

        app:layout_constraintTop_toBottomOf="@+id/StatusText" />

    <Button
        android:id="@+id/lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nightmodeswitch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/layout"
        android:backgroundTint="@color/button"
        android:gravity="bottom"
        android:onClick="goLanguage"
        android:text="@string/change_language"
        android:textColor="@color/white"
        android:textSize="@dimen/activity_horizontal_margin"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent" />

</RelativeLayout>