<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CaretakerManage">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:onClick="onBackClick"
        app:logo="@drawable/gallery"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:subtitle="@string/managepage"
        app:title="@string/app_name"
        app:titleMarginStart="90dp" />

    <RelativeLayout
        android:id="@+id/manageinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin3">

        <ImageButton
            android:id="@+id/fammanage"
            android:layout_width="@dimen/photo_size"
            android:layout_height="@dimen/photo_size"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@drawable/family"
            android:onClick="manageFamily" />


        <ImageButton
            android:id="@+id/managePhoto"
            android:layout_width="@dimen/photo_size"
            android:layout_height="@dimen/photo_size"
            android:layout_below="@+id/upload"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin2"
            android:background="@drawable/album"
            android:onClick="manageGallery"
            android:textColor="#455A64"
            android:visibility="visible" />


        <ImageButton
            android:id="@+id/manggefriends"
            android:layout_width="@dimen/photo_size"
            android:layout_height="@dimen/photo_size"
            android:layout_marginLeft="60dp"
            android:layout_toRightOf="@+id/fammanage"
            android:background="@drawable/friendship"
            android:onClick="manageFriends" />

        <TextView
            android:id="@+id/upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fammanage"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/manage_family"
            android:textColor="@color/text_color"
            android:textSize="25dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/managefam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fammanage"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="-11dp"
            android:layout_toEndOf="@+id/upload"
            android:layout_toRightOf="@+id/upload"
            android:text="@string/manage_friends"
            android:textColor="@color/text_color"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/datainfo"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/managePhoto"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin2"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="144dp"
            android:text="@string/manage_gallery"
            android:textColor="@color/text_color"
            android:textSize="25dp"
            android:textStyle="bold" />


    </RelativeLayout>
</RelativeLayout>